--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
 
-<video autoplay  poster="https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/polina.jpg" id="bgvid" loop>
+<video autoplay  poster="assets/sample.png" id="bgvid" loop>
 	<!-- WCAG general accessibility recommendation is that media such as background video play through only once. Loop turned on for the purposes of illustration; if removed, the end of the video will fade in the same way created by pressing the "Pause" button  -->
-	<source src="s.mp4" type="video/mp4">
+	<source src="assets/sample.mp4" type="video/mp4">
 </video>
 <div id="polina">
 	<h1>Churva + Churva</h1>
